k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruleta-almuerzos-service
  namespace: ruleta-almuerzos
  labels:
    app: ruleta-almuerzos
spec:
  type: ClusterIP
  selector:
    app: ruleta-almuerzos
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
